--- a/CowManagerApp.MVC/Views/Herd/HerdEdit.cshtml
+++ b/CowManagerApp.MVC/Views/Herd/HerdEdit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CowManagerApp.MVC.Models.Cow
+﻿@model CowManagerApp.MVC.Models.Herd
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,23 +6,14 @@
 
 <h1>Edit</h1>
 
-<h4>Cow</h4>
+<h1>Herd @Model.Id</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="HerdEdit" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />           
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Idherd" class="control-label"></label>
-                <select asp-for="Idherd" class="form-control" asp-items="ViewBag.Herds"></select>
-                <span asp-validation-for="Idherd" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="Id" />
+           
             <div class="form-group">
                 <label asp-for="Comment" class="control-label"></label>
                 <input asp-for="Comment" class="form-control" />
