--- a/CowManagerApp.MVC/Views/Herd/Index.cshtml
+++ b/CowManagerApp.MVC/Views/Herd/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@model CowManagerApp.MVC.Models.Herd
-@* @{
+﻿@model IEnumerable<CowManagerApp.MVC.Models.Herd>
+@{
     ViewData["Title"] = "List of herds";
 }
 <h1>@ViewData["Title"]</h1>
@@ -25,7 +25,7 @@
         {
             <tr>
                 <td>
-                    <a href="@Url.Action("Details", new { id = item.Id })">@item.Id</a>)
+                    <a href="@Url.Action("HerdDetails", new { id = item.Id })">@item.Id</a>)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.AmountOfCows)
@@ -33,20 +33,15 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Comment)
                 </td>
+                <td>
+                    <a asp-action="HerdEdit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="HerdDelete" asp-route-id="@item.Id">Delete</a>
+                </td>
 
             </tr>
 
         }
     </tbody>
-</table> *@
+</table>
 
-<h1>Cows in herd @Model.Id (Number of cows: @Model.AmountOfCows)</h1>
 
-<ul>
-    @foreach (var cow in Model.Cows)
-    {
-        <li>@cow.Name</li>
-    }
-</ul>
-
-<a href="@Url.Action("Index")">Back to herds</a>
