--- a/CowManagerApp.MVC/Views/Shared/_Layout.cshtml
+++ b/CowManagerApp.MVC/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cow" asp-action="Index">Cows</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Herd" asp-action="Index">Herds</a>
+                        </li>
                     </ul>
                 </div>
             </div>
