empty disease and medicine

--- a/CowManagerApp.MVC/Views/Disease/DiseaseDetails.cshtml
+++ b/CowManagerApp.MVC/Views/Disease/DiseaseDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model CowManagerApp.MVC.Models.Cow
+﻿@model CowManagerApp.MVC.Models.Disease
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Cow</h4>
+    <h4></h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -23,12 +23,6 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Idherd)
-        </dt>
-        <dd> class="col-sm-2">
-            @Html.DisplayFor(model => model.Idherd)
-        </dd>
-        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Comment)
         </dt>
         <dd>
@@ -38,6 +32,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
