--- a/CowManagerApp.MVC/Views/Shared/_Layout.cshtml
+++ b/CowManagerApp.MVC/Views/Shared/_Layout.cshtml
@@ -31,6 +31,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Herd" asp-action="Index">Herds</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Medicine" asp-action="Index">Medicine</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Disease" asp-action="Index">Disease</a>
+                        </li>
                     </ul>
                 </div>
             </div>
