--- a/CowManagerApp.MVC/Views/Disease/Index.cshtml
+++ b/CowManagerApp.MVC/Views/Disease/Index.cshtml
@@ -29,7 +29,7 @@
                 </td>
                 
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a asp-action="DiseaseDetails" asp-route-id="@item.Id">Details</a>
                 </td>
             </tr>
 
