--- a/CowManagerApp.MVC/Views/Cow/Create.cshtml
+++ b/CowManagerApp.MVC/Views/Cow/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
            
             <div class="form-group">
@@ -20,8 +20,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Idherd" class="control-label"></label>
+                <a asp-action="HerdCreate" asp-controller="Herd">Create herd</a>
                 <select asp-for="Idherd" class="form-control" asp-items="ViewBag.Herds"></select>
                 <span asp-validation-for="Idherd" class="text-danger"></span>
+                
             </div>
             <div class="form-group">
                 <label asp-for="Comment" class="control-label"></label>
