--- a/CowManagerApp.MVC/Views/Herd/HerdCreate.cshtml
+++ b/CowManagerApp.MVC/Views/Herd/HerdCreate.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="HerdCreate" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
@@ -20,7 +20,7 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="HerdCreate" class="btn btn-primary" />
             </div>
         </form>
     </div>
