--- a/CowManagerApp.MVC/Views/Herd/Index.cshtml
+++ b/CowManagerApp.MVC/Views/Herd/Index.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "List of herds";
 }
 <h1>@ViewData["Title"]</h1>
+<a asp-action="HerdCreate" >Create</a>
 
 <table class="table">
     <thead>
@@ -34,6 +35,7 @@
                     @Html.DisplayFor(modelItem => item.Comment)
                 </td>
                 <td>
+                    <a asp-action="AddCow" asp-route-idh="@item.Id">Add Cow</a>
                     <a asp-action="HerdEdit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="HerdDelete" asp-route-id="@item.Id">Delete</a>
                 </td>
